// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnderlineNav.Link adds activeClassName={SELECTED_CLASS} when it gets a "to" prop 1`] = `
.c0 {
  padding: 16px 8px;
  margin-right: 16px;
  font-size: 14px;
  line-height: 1.5;
  color: var(--fg-default,#24292f);
  text-align: center;
  border-bottom: 2px solid transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  color: var(--fg-default,#24292f);
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom-color: var(--neutral-muted,rgba(175,184,193,0.2));
  -webkit-transition: border-bottom-color 0.2s ease;
  transition: border-bottom-color 0.2s ease;
}

.c0:hover .PRC-UnderlineNav-octicon,
.c0:focus .PRC-UnderlineNav-octicon {
  color: var(--fg-muted,#57606a);
}

.c0.PRC-selected {
  color: var(--fg-default,#24292f);
  border-bottom-color: var(--primer-border-active,#fd8c73);
}

.c0.PRC-selected .PRC-UnderlineNav-octicon {
  color: var(--fg-default,#24292f);
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid var(--accent-fg,#0969da);
  outline-offset: -8px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid var(--accent-fg,#0969da);
  outline-offset: -8px;
}

<div
  activeClassName="selected"
  className="c0 PRC-UnderlineNav-item"
  to="#"
/>
`;

exports[`UnderlineNav.Link renders consistently 1`] = `
.c0 {
  padding: 16px 8px;
  margin-right: 16px;
  font-size: 14px;
  line-height: 1.5;
  color: var(--fg-default,#24292f);
  text-align: center;
  border-bottom: 2px solid transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  color: var(--fg-default,#24292f);
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom-color: var(--neutral-muted,rgba(175,184,193,0.2));
  -webkit-transition: border-bottom-color 0.2s ease;
  transition: border-bottom-color 0.2s ease;
}

.c0:hover .PRC-UnderlineNav-octicon,
.c0:focus .PRC-UnderlineNav-octicon {
  color: var(--fg-muted,#57606a);
}

.c0.PRC-selected {
  color: var(--fg-default,#24292f);
  border-bottom-color: var(--primer-border-active,#fd8c73);
}

.c0.PRC-selected .PRC-UnderlineNav-octicon {
  color: var(--fg-default,#24292f);
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid var(--accent-fg,#0969da);
  outline-offset: -8px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid var(--accent-fg,#0969da);
  outline-offset: -8px;
}

<a
  className="c0 PRC-UnderlineNav-item"
/>
`;

exports[`UnderlineNav.Link respects the "selected" prop 1`] = `
.c0 {
  padding: 16px 8px;
  margin-right: 16px;
  font-size: 14px;
  line-height: 1.5;
  color: var(--fg-default,#24292f);
  text-align: center;
  border-bottom: 2px solid transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  color: var(--fg-default,#24292f);
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom-color: var(--neutral-muted,rgba(175,184,193,0.2));
  -webkit-transition: border-bottom-color 0.2s ease;
  transition: border-bottom-color 0.2s ease;
}

.c0:hover .PRC-UnderlineNav-octicon,
.c0:focus .PRC-UnderlineNav-octicon {
  color: var(--fg-muted,#57606a);
}

.c0.PRC-selected {
  color: var(--fg-default,#24292f);
  border-bottom-color: var(--primer-border-active,#fd8c73);
}

.c0.PRC-selected .PRC-UnderlineNav-octicon {
  color: var(--fg-default,#24292f);
}

.c0:focus:not(:disabled) {
  box-shadow: none;
  outline: 2px solid var(--accent-fg,#0969da);
  outline-offset: -8px;
}

.c0:focus:not(:disabled):not(:focus-visible) {
  outline: solid 1px transparent;
}

.c0:focus-visible:not(:disabled) {
  box-shadow: none;
  outline: 2px solid var(--accent-fg,#0969da);
  outline-offset: -8px;
}

<a
  className="c0 PRC-UnderlineNav-item PRC-selected"
  selected={true}
/>
`;
